--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
           <div class="container">
               <div class="navbar-header">
-                  <a class="navbar-brand" href="#">Giffinder</a>
+                  <a class="navbar-brand" href="#">Jif finder</a>
               </div>
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <div class="col-sm-3 col-md-3 pull-right">
@@ -42,7 +42,7 @@
       <section>
         <div class="container"> 
             <div class="row gallery">
-                  <h3 class="text-center">  Search for a Gif above <br> Your results will display here</h3>
+                  <h3 class="text-center" id = "display">  Search for a Gif above <br> Your results will display here</h3>
             </div>
         </div> 
       <section>
